--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
   <!-- Хедер сторінки-->
-  <header>
-    <nav>
+  <header class="container">
+    <nav class="container">
       <a href="./index.html" class="weblogo link">Web<span class="studiologoheader">Studio</span></a>
       <ul class="list">
         <li><a href="./index.html" class="hero-menu link">Studio</a></li>
@@ -25,7 +25,7 @@
       </ul>
     </nav>
 
-    <address class="contact-data">
+    <address class="contact-data container">
       <ul class="list">
         <li>
           <a href="mailto:info@devstudio.com" class="adres-menu link">info@devstudio.com</a>
@@ -39,11 +39,11 @@
 
   <!-- Унікальний контент сторінки-->
   <main>
-    <section class="section-hero">
+    <section class="section-hero container">
       <h1 class="hero-text">Effective Solutions for Your Business</h1>
       <button type="button" class="btn-hero">Order Service</button>
     </section>
-    <section>
+    <section class="container">
       <h2 hidden>advanced</h2>
       <ul class="list">
         <li>
@@ -76,7 +76,7 @@
         </li>
       </ul>
     </section>
-    <section class="section-what">
+    <section class="section-what container">
       <h2 class="title-page">What are we doing</h2>
       <ul class="list">
         <li>
@@ -91,7 +91,7 @@
       </ul>
     </section>
 
-    <section class="section-team">
+    <section class="section-team container">
       <h2 class="title-page">Our Team</h2>
       <ul class="list">
         <li class="catalog">
@@ -122,7 +122,7 @@
   </main>
 
   <!-- Футер сторінки-->
-  <footer class="footer-bag">
+  <footer class="footer-bag container">
     <a href="./index.html" class="weblogofooter link">Web<span class="studiologofooter">Studio</span></a>
     <p class="title-footer">
       Increase the flow of customers and sales for your business with digital
