--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 <body>
 
     <!-- Хедер сторінки-->
-    <header>
+    <header class="container">
         <nav class="menu">
             <a href="./index.html" class="weblogo link">Web<span class="studiologoheader">Studio</span></a>
             <ul class="list">
@@ -41,7 +41,7 @@
 
     <!-- Унікальний контент сторінки-->
     <main>
-        <section>
+        <section class="container">
             <h1 hidden>advanced</h1>
             <ul class="list">
                 <li><button type="button" class="btn-portfolio">All</button></li>
@@ -54,42 +54,42 @@
                 <li>
                     <a href="#" class="link">
                         <img src="./images/page2/img-8-min.jpg" alt="Banking App Interface Concept" width="360"
-                            height="300" />
+                            height="300" class="portfolio-border" />
                         <h2 class="title-text-portfolio">Banking App Interface Concept</h2>
                         <p class="title-text">App</p>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="link">
-                        <img src="./images/page2/img-7-min.jpg" alt="Cashless Payment" width="360" height="300" />
+                        <img src="./images/page2/img-7-min.jpg" alt="Cashless Payment" width="360" height="300" class="portfolio-border"  />
                         <h2 class="title-text-portfolio">Cashless Payment</h2>
                         <p class="title-text">Marketing</p>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="link">
-                        <img src="./images/page2/img-6-min.jpg" alt="Meditation App" width="360" height="300" />
+                        <img src="./images/page2/img-6-min.jpg" alt="Meditation App" width="360" height="300" class="portfolio-border" />
                         <h2 class="title-text-portfolio">Meditation App</h2>
                         <p class="title-text">App</p>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="link">
-                        <img src="./images/page2/img-5-min.jpg" alt="Taxi Service" width="360" height="300" />
+                        <img src="./images/page2/img-5-min.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-border" />
                         <h2 class="title-text-portfolio">Taxi Service</h2>
                         <p class="title-text">Marketing</p>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="link">
-                        <img src="./images/page2/img-4-min.jpg" alt="Screen Illustrations" width="360" height="300" />
+                        <img src="./images/page2/img-4-min.jpg" alt="Screen Illustrations" width="360" height="300" class="portfolio-border" />
                         <h2 class="title-text-portfolio">Screen Illustrations</h2>
                         <p class="title-text">Design</p>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="link">
-                        <img src="./images/page2/img-3-min.jpg" alt="Online Courses" width="360" height="300" />
+                        <img src="./images/page2/img-3-min.jpg" alt="Online Courses" width="360" height="300" class="portfolio-border" />
                         <h2 class="title-text-portfolio">Online Courses</h2>
                         <p class="title-text">Marketing</p>
                     </a>
@@ -97,21 +97,21 @@
                 <li>
                     <a href="#" class="link">
                         <img src="./images/page2/img-2-min.jpg" alt="Instagram Stories Concept" width="360"
-                            height="300" />
+                            height="300" class="portfolio-border" />
                         <h2 class="title-text-portfolio">Instagram Stories Concept</h2>
                         <p class="title-text">Design</p>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="link">
-                        <img src="./images/page2/img-1-min.jpg" alt="Organic Food" width="360" height="300" />
+                        <img src="./images/page2/img-1-min.jpg" alt="Organic Food" width="360" height="300" class="portfolio-border" />
                         <h2 class="title-text-portfolio">Organic Food</h2>
                         <p class="title-text">Web Site</p>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="link">
-                        <img src="./images/page2/img-0-min.jpg" alt="Fresh Coffee" width="360" height="300" />
+                        <img src="./images/page2/img-0-min.jpg" alt="Fresh Coffee" width="360" height="300" class="portfolio-border" />
                         <h2 class="title-text-portfolio">Fresh Coffee</h2>
                         <p class="title-text">Web Site</p>
                     </a>
@@ -121,7 +121,7 @@
 
     </main>
     <!-- Футер сторінки-->
-    <footer class="footer-bag">
+    <footer class="footer-bag container">
         <a href="./index.html" class="weblogofooter link">Web<span class="studiologofooter">Studio</span></a>
         <p class="title-footer">
             Increase the flow of customers and sales for your business with digital
