--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
 
 <body>
   <!-- Хедер сторінки-->
-  <header class="container">
-    <nav class="container">
-      <a href="./index.html" class="weblogo link">Web<span class="studiologoheader">Studio</span></a>
-      <ul class="list">
-        <li><a href="./index.html" class="hero-menu link">Studio</a></li>
-        <li><a href="./portfolio.html" class="hero-menu link">Portfolio</a></li>
-        <li><a href="" class="hero-menu link">Contacts</a></li>
-      </ul>
-    </nav>
-
-    <address class="contact-data container">
-      <ul class="list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="adres-menu link">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+110001111111" class="adres-menu link">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
-    </address>
+  <header class="container heder-studio">
+    <div class="container heder-past">
+        <nav class="container menu">
+          <a href="./index.html" class="weblogo link">Web<span class="studiologoheader">Studio</span></a>
+          <ul class="list">
+            <li><a href="./index.html" class="hero-menu link">Studio</a></li>
+            <li><a href="./portfolio.html" class="hero-menu link">Portfolio</a></li>
+            <li><a href="" class="hero-menu link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contact-data container">
+          <ul class="list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="adres-menu link">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="adres-menu link">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+    </div>
   </header>
-
   <!-- Унікальний контент сторінки-->
   <main>
     <section class="section-hero container">
