--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
-    <link href="
-    https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
-    " rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
@@ -17,28 +15,29 @@
 
 <body>
 
-    <!-- Хедер сторінки-->
-    <header class="container">
-        <nav class="menu">
-            <a href="./index.html" class="weblogo link">Web<span class="studiologoheader">Studio</span></a>
-            <ul class="list">
-                <li><a href="./index.html" class="link catalog-portfolio">Studio</a></li>
-                <li><a href="./portfolio.html" class="link catalog-portfolio">Portfolio</a></li>
-                <li><a href="" class="link catalog-portfolio">Contacts</a></li>
-            </ul>
+  <!-- Хедер сторінки-->
+  <header class="container heder-studio">
+    <div class="container heder-past">
+        <nav class="container menu">
+          <a href="./index.html" class="weblogo link">Web<span class="studiologoheader">Studio</span></a>
+          <ul class="list">
+            <li><a href="./index.html" class="hero-menu link">Studio</a></li>
+            <li><a href="./portfolio.html" class="hero-menu link">Portfolio</a></li>
+            <li><a href="" class="hero-menu link">Contacts</a></li>
+          </ul>
         </nav>
-        <address class="adres-portfolio">
-            <ul class="list">
-                <li>
-                    <a href="mailto:info@devstudio.com" class="meil-header link">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+110001111111" class="tel-header link">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
+        <address class="contact-data container">
+          <ul class="list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="adres-menu link">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="adres-menu link">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
         </address>
-    </header>
-
+    </div>
+  </header>
     <!-- Унікальний контент сторінки-->
     <main>
         <section class="container">
