--- a/portfolio.html
+++ b/portfolio.html
@@ -20,19 +20,19 @@
     <div class="container heder-past">
         <nav class="container menu">
           <a href="./index.html" class="weblogo link">Web<span class="studiologoheader">Studio</span></a>
-          <ul class="list">
-            <li><a href="./index.html" class="hero-menu link">Studio</a></li>
-            <li><a href="./portfolio.html" class="hero-menu link">Portfolio</a></li>
-            <li><a href="" class="hero-menu link">Contacts</a></li>
+          <ul class="list hero-menu">
+            <li><a href="./index.html" class="link">Studio</a></li>
+            <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+            <li><a href="" class="link">Contacts</a></li>
           </ul>
         </nav>
         <address class="contact-data container">
-          <ul class="list">
+          <ul class="list adres-menu">
             <li>
-              <a href="mailto:info@devstudio.com" class="adres-menu link">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
             </li>
             <li>
-              <a href="tel:+110001111111" class="adres-menu link">+11 (000) 111-11-11</a>
+              <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
