--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="container heder-past">
         <nav class="container menu">
           <a href="./index.html" class="weblogo link">Web<span class="studiologoheader">Studio</span></a>
-          <ul class="list hero-menu">
-            <li><a href="./index.html" class="link">Studio</a></li>
-            <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-            <li><a href="" class="link">Contacts</a></li>
+          <ul class="list">
+            <li><a href="./index.html" class="link hero-menu">Studio</a></li>
+            <li><a href="./portfolio.html" class="link hero-menu">Portfolio</a></li>
+            <li><a href="" class="link hero-menu">Contacts</a></li>
           </ul>
         </nav>
         <address class="contact-data container">
