--- a/index.html
+++ b/index.html
@@ -123,11 +123,13 @@
 
   <!-- Футер сторінки-->
   <footer class="footer-bag container">
-    <a href="./index.html" class="weblogofooter link">Web<span class="studiologofooter">Studio</span></a>
-    <p class="title-footer">
-      Increase the flow of customers and sales for your business with digital
-      marketing & growth solutions.
-    </p>
+    <div class="container">
+      <a href="./index.html" class="weblogofooter link">Web<span class="studiologofooter">Studio</span></a>
+      <p class="title-footer">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </div>
   </footer>
 </body>
 
