--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
   <!-- Унікальний контент сторінки-->
   <main>
     <section class="section-hero container">
-      <h1 class="hero-text">Effective Solutions for Your Business</h1>
-      <button type="button" class="btn-hero">Order Service</button>
+      <div class="container">
+        <h1 class="hero-text">Effective Solutions for Your Business</h1>
+        <button type="button" class="btn-hero">Order Service</button>
+      </div>
     </section>
     <section class="container">
       <h2 hidden>advanced</h2>
       <ul class="list">
         <li>
-          <h3 class="title-text-on">Strategy</h3>
+          <h3 class="title-text-on">Strategy</h3>0976069351
           <p class="title-text">
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
