--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h2 hidden>advanced</h2>
       <ul class="list">
         <li>
-          <h3 class="title-text-on">Strategy</h3>0976069351
+          <h3 class="title-text-on">Strategy</h3>
           <p class="title-text">
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
