--- a/index.html
+++ b/index.html
@@ -46,37 +46,39 @@
       </div>
     </section>
     <section class="container">
-      <h2 hidden>advanced</h2>
-      <ul class="list">
-        <li>
-          <h3 class="title-text-on">Strategy</h3>
-          <p class="title-text">
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <h3 class="title-text-on">Punctuality</h3>
-          <p class="title-text">
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li>
-          <h3 class="title-text-on">Diligence</h3>
-          <p class="title-text">
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li>
-          <h3 class="title-text-on">Technologies</h3>
-          <p class="title-text">
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 visually-hidden>advanced</h2>
+        <ul class="list list-past">
+          <li class="list list-past-content">
+            <h3 class="title-text-on">Strategy</h3>
+            <p class="title-text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3 class="title-text-on">Punctuality</h3>
+            <p class="title-text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3 class="title-text-on">Diligence</h3>
+            <p class="title-text">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3 class="title-text-on">Technologies</h3>
+            <p class="title-text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="section-what container">
       <h2 class="title-page">What are we doing</h2>
