--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       </div>
     </section>
     <section class="container">
-      <div class="container">
-        <h2 visually-hidden>advanced</h2>
+      <div class="container list-content">
+        <h2 hidden>advanced</h2>
         <ul class="list list-past">
           <li class="list list-past-content">
             <h3 class="title-text-on">Strategy</h3>
@@ -81,18 +81,20 @@
       </div>
     </section>
     <section class="section-what container">
-      <h2 class="title-page">What are we doing</h2>
-      <ul class="list">
-        <li>
-          <img src="./images/page1/111-min.jpg" alt="foto1" width="360" height="300" />
-        </li>
-        <li>
-          <img src="./images/page1/222-min.jpg" alt="foto2" width="360" height="300" />
-        </li>
-        <li>
-          <img src="./images/page1/333-min.jpg" alt="foto3" width="360" height="300" />
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="title-page">What are we doing</h2>
+        <ul class="list list-back">
+          <li>
+            <img src="./images/page1/111-min.jpg" alt="foto1" width="360" height="300" />
+          </li>
+          <li>
+            <img src="./images/page1/222-min.jpg" alt="foto2" width="360" height="300" />
+          </li>
+          <li>
+            <img src="./images/page1/333-min.jpg" alt="foto3" width="360" height="300" />
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section class="section-team container">
