--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="container">
         <h2 class="title-page">What are we doing</h2>
         <ul class="list list-back">
-          <li>
+          <li class="list-back-content">
             <img src="./images/page1/111-min.jpg" alt="foto1" width="360" height="300" />
           </li>
           <li>
@@ -98,32 +98,37 @@
     </section>
 
     <section class="section-team container">
-      <h2 class="title-page">Our Team</h2>
-      <ul class="list">
-        <li class="catalog">
-          <img src="./images/page1/img1-min.jpg" alt="foto4" width="264" height="260" />
-          <h3 class="title-text-on">Mark Guerrero</h3>
-          <p class="title-text">Product Designer</p>
-        </li>
-
-        <li class="catalog">
-          <img src="./images/page1/img2-min.jpg" alt="foto5" width="264" height="260" />
-          <h3 class="title-text-on">Tom Ford</h3>
-          <p class="title-text">Frontend Developer</p>
-        </li>
-
-        <li class="catalog">
-          <img src="./images/page1/img3-min.jpg" alt="foto6" width="264" height="260" />
-          <h3 class="title-text-on">Camila Garcia</h3>
-          <p class="title-text">Marketing</p>
-        </li>
-
-        <li class="catalog">
-          <img src="./images/page1/img4-min.jpg" alt="foto7" width="264" height="260" />
-          <h3 class="title-text-on">Daniel Wilson</h3>
-          <p class="title-text">UI Designer</p>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="title-page">Our Team</h2>
+        <ul class="list container page-catalog">
+          <li class="catalog">
+            <img src="./images/page1/img1-min.jpg" alt="foto4" width="264" height="260" />
+            <h3 class="title-text-on">Mark Guerrero</h3>
+            <p class="title-text">Product Designer</p>
+          </li>
+          <li class="catalog">
+            <img src="./images/page1/img2-min.jpg" alt="foto5" width="264" height="260" />
+            <div class="name-person">
+              <h3 class="title-text-on">Tom Ford</h3>
+              <p class="title-text">Frontend Developer</p>
+            </div>
+          </li>
+          <li class="catalog">
+            <img src="./images/page1/img3-min.jpg" alt="foto6" width="264" height="260" />
+            <div class="name-person">
+              <h3 class="title-text-on">Camila Garcia</h3>
+              <p class="title-text">Marketing</p>
+            </div>
+          </li>
+          <li class="catalog">
+            <img src="./images/page1/img4-min.jpg" alt="foto7" width="264" height="260" />
+            <div class="name-person">
+              <h3 class="title-text-on">Daniel Wilson</h3>
+              <p class="title-text">UI Designer</p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
 
