--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
   <!-- Хедер сторінки-->
-  <header class="container heder-studio">
+  <header class="heder-studio">
     <div class="container heder-past">
-        <nav class="container menu">
+        <nav class="menu">
           <a href="./index.html" class="weblogo link">Web<span class="studiologoheader">Studio</span></a>
           <ul class="list">
             <li><a href="./index.html" class="link hero-menu">Studio</a></li>
@@ -25,7 +25,7 @@
             <li><a href="" class="link hero-menu">Contacts</a></li>
           </ul>
         </nav>
-        <address class="contact-data container">
+        <address class="contact-data">
           <ul class="list adres-menu">
             <li>
               <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
@@ -100,7 +100,7 @@
     <section class="section-team">
       <div class="container">
         <h2 class="title-page">Our Team</h2>
-        <ul class="list container page-catalog">
+        <ul class="list page-catalog">
           <li class="catalog">
             <img src="./images/page1/img1-min.jpg" alt="foto4" width="264" height="260" />
             <div class="name-person">
@@ -135,7 +135,7 @@
   </main>
 
   <!-- Футер сторінки-->
-  <footer class="footer-bag container">
+  <footer class="footer-bag">
     <div class="container">
       <a href="./index.html" class="weblogofooter link">Web<span class="studiologofooter">Studio</span></a>
       <p class="title-footer">
