--- a/portfolio.html
+++ b/portfolio.html
@@ -16,23 +16,23 @@
 <body>
 
   <!-- Хедер сторінки-->
-  <header class="container heder-studio">
+  <header class="heder-studio">
     <div class="container heder-past">
-        <nav class="container menu">
+        <nav class="menu">
           <a href="./index.html" class="weblogo link">Web<span class="studiologoheader">Studio</span></a>
-          <ul class="list hero-menu">
-            <li><a href="./index.html" class="link hero-menu-studio">Studio</a></li>
-            <li><a href="./portfolio.html" class="link hero-menu-studio">Portfolio</a></li>
-            <li><a href="" class="link hero-menu-studio">Contacts</a></li>
+          <ul class="list">
+            <li><a href="./index.html" class="link hero-menu">Studio</a></li>
+            <li><a href="./portfolio.html" class="link hero-menu">Portfolio</a></li>
+            <li><a href="" class="link hero-menu">Contacts</a></li>
           </ul>
         </nav>
-        <address class="contact-data container">
+        <address class="contact-data">
           <ul class="list adres-menu">
             <li>
-              <a href="mailto:info@devstudio.com" class="link hero-menu-studio">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
             </li>
             <li>
-              <a href="tel:+110001111111" class="link hero-menu-studio">+11 (000) 111-11-11</a>
+              <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
@@ -40,9 +40,9 @@
   </header>
     <!-- Унікальний контент сторінки-->
     <main>
-        <section class="container section-portfolio">
+        <section class="section-portfolio">
             <div class="container">
-                <h1 hidden>advanced</h1>
+                <h1 class="visually-hidden">advanced</h1>
                 <ul class="list section-portfolio-spese">
                     <li><button type="button" class="btn-portfolio">All</button></li>
                     <li><button type="button" class="btn-portfolio">Web Site</button></li>
@@ -158,7 +158,7 @@
 
     </main>
     <!-- Футер сторінки-->
-    <footer class="footer-bag container">
+    <footer class="footer-bag">
         <a href="./index.html" class="weblogofooter link">Web<span class="studiologofooter">Studio</span></a>
         <p class="title-footer">
             Increase the flow of customers and sales for your business with digital
