--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <button type="button" class="btn-hero">Order Service</button>
       </div>
     </section>
-    <section>
+    <section class="section-two">
       <div class="container list-content">
         <h2 class="visually-hidden">advanced</h2>
         <ul class="list list-past">
@@ -87,10 +87,10 @@
           <li class="list-back-content">
             <img src="./images/page1/111-min.jpg" alt="foto1" width="360" height="300" />
           </li>
-          <li>
+          <li class="list-back-content">
             <img src="./images/page1/222-min.jpg" alt="foto2" width="360" height="300" />
           </li>
-          <li>
+          <li class="list-back-content">
             <img src="./images/page1/333-min.jpg" alt="foto3" width="360" height="300" />
           </li>
         </ul>
