--- a/portfolio.html
+++ b/portfolio.html
@@ -146,14 +146,16 @@
         </section>
 
     </main>
-    <!-- Футер сторінки-->
-    <footer class="footer-bag">
-        <a href="./index.html" class="weblogofooter link">Web<span class="studiologofooter">Studio</span></a>
-        <p class="title-footer">
-            Increase the flow of customers and sales for your business with digital
-            marketing & growth solutions.
-        </p>
-    </footer>
+  <!-- Футер сторінки-->
+  <footer class="footer-bag">
+    <div class="container">
+      <a href="./index.html" class="weblogofooter link">Web<span class="studiologofooter">Studio</span></a>
+      <p class="title-footer">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </div>
+  </footer>
 </body>
 
 </html>
