--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                     <li><button type="button" class="btn-portfolio">Design</button></li>
                     <li><button type="button" class="btn-portfolio">Marketing</button></li>
                 </ul>
-                <ul class="list container portfolio-content">
+                <ul class="list portfolio-content">
                     <li class="portfolio-content-spase">
                         <a href="#" class="link portfolio-title">
                             <img src="./images/page2/img-8-min.jpg" alt="Banking App Interface Concept" width="360"
